--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<!DOCTYPE html>
+<!--DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>الفولت العالي</title>
+		<style>
+			body { margin: 0; }
+		</style>
+	</head>
+	<body>
+		<script type="module" src="/main.js"></script>        
+	</body>
+</html-->
+
+<DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -17,7 +31,7 @@
       repo: ''
     }
   </script>
-  <!-- Docsify v4 -->
+  <script type="module" src="/main.js"></script>    
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
 </body>
 </html>
